Site skins: Fix Gradation's logo/background gradient alignment on mobile

--- a/htdocs/scss/skins/gradation/_gradation-base.scss
+++ b/htdocs/scss/skins/gradation/_gradation-base.scss
@@ -145,6 +145,15 @@ ul { list-style: circle; }
 }
 
 /**
+ * Fix the gradient alignment between the logo and the background image on mobile
+ */
+@media #{$small-only} {
+    body {
+        background-position: top -21px left;
+    }
+}
+
+/**
  * #content
  */
 
